auth-service/overlays/beta/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-v1
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: auth-service
          image: 100.107.74.15:5000/auth-service:beta-1d9f4ab
          imagePullPolicy: Always
          ports:
            - containerPort: 5005  # 调试端口
