auth-service/overlays/beta/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service-nodeport
spec:
  type: NodePort
  selector:
    app: auth-service
    version: v1
  ports:
    - name: http-web
      protocol: TCP
      port: 80
      targetPort: api
      nodePort: 30880
