auth-service/overlays/beta/networking-patch.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: auth-gateway
spec:
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: internal-tls-cert
      hosts:
        - "beta-auth.flyingjack.top"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: auth-service
spec:
  hosts:
    - "beta-auth.flyingjack.top"
